# hammy

./: .cproject  .gitignore  .project  Activate.ps1  CLAUDE.md  CMakeLists.txt  README.md  calculate_energy.py  countdown.Dockerfile  countdown.sh  create_hammy_machine.sh  create_query_machine.sh  cuda_test.cu  device_query.txt  docker-compose.yml  docker.env  hammy.exe.stackdump  hammy_cpu_kernel.c  hammy_machine.compose  index.html  library_prompt.txt  log_yc.sh  main.cpp  process_jinja.py  pyproject.toml  pyrightconfig.json  readme.html
.github/workflows/: build-docs.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
clickhouse-settings/: config.xml  users.xml
computation_framework/: cost_analysis.html  index.html
dbt/: .user.yml  profiles.yml
dbt/hammy/: dbt_project.yml
dbt/hammy/macros/: prepare.sql
dbt/hammy/models/1 incremental/: staging.sql
dbt/hammy/models/2_epochs/: epochs.sql  staging_with_epochs.sql
dbt/hammy/models/3_incremental/1_walk/: walk_1_1_epoch.sql  walk_1_1_time.sql
docker/: .s3cfg  CLAUDE.md  chquery.Dockerfile  chquery.sh  clickhouse-local.xml  clickhouse-users.xml  countdown.sh  entrypoint.sh  hammy-base.Dockerfile  hammy.Dockerfile  hammy.sh  hammy_entrypoint.sh  hammy_machine.compose  hammy_machine_cpu.compose  log_yc.sh  run_nice.sh  s3_access_key_id.cipher  s3_secret_access_key.cipher  ymonitoring.yml
docs/: README.md
docs/.obsidian/: workspace.json
docs/experiments/: 1_walk.md
experiments/: 1_walk.html
experiments/001 Free particle/: Free particle.nb
experiments/01_walk/: 1_walk.ipynb  CMakeLists.txt  __main__.py  hammy.c  walk.c  walk.h  walk.py
experiments/02_lattice/: lattice.py
experiments/02_lattice_old/: __main__.py  lattice.c  lattice.py
experiments/02_lattice_types/: __main__.py  brick.py  common.py  hexagonal.h  hexagonal.py  square.py  triangular.c  triangular.py
experiments/03_lattice_types/: brick.c  brick.py  common.py  hexagonal.c  hexagonal.py  square.py  triangular.py
experiments/images/: 1_histogram.html  2_position_ci.html  3_position_convergence.html  4_bootstrap_std.html  5_nnls_residual.html  6_fit_quality.html
hammy-docs/: README.md
hammy-docs/.obsidian/: workspace.json
hammy-docs/.obsidian/plugins/webpage-html-export/: data.json  main.js
hammy-lib/: common.h  cuda_cpu.h  hammy.py  hammy_cpu.py  machine_configuration.py  simulator.py  util.py
hammy-lib/c-libs/common/: common.h
hammy_docs/: index.md
hammy_docs/.obsidian/: community-plugins.json
hammy_docs/.obsidian/plugins/webpage-html-export/: data.json
hammy_docs/algorithms/: optimizations.md  position_detection.md
hammy_docs/computation_framework/: cost_analysis.md  index.md
hammy_docs/experiments/: 1_walk.md  2_lattice_types.md
hammy_docs/ideas/: fermi_gas.md  index.md  is_hamiltonian_fermionic.md  onthology_as_sympletic_graph.md  qft_by_michaelmas_term.md
hammy_lib/: calculation.py  calculator.py  calibration_results.py  calibrator.py  ccode.py  experiment.py  experiment_configuration.py  graph.py  hammy_cpu.py  hammy_object.py  hashes.py  machine_configuration.py  parallel_calibration.py  sequential_calibration.py  sequential_calibrator.py  simulation.py  simulator.py  simulator_platforms.py  util.py  vizualization.py  vizualizer.py  yandex_cloud_storage.py
hammy_lib/c_libs/common/: common.h
hammy_lib/c_libs/cuda_cpu/: cuda_cpu.h
hammy_lib/c_libs/pcg_basic/: CMakeLists.txt
hammy_lib/calculations/: argmax.py  bootstrap_position.py  cross_platform_gtest.py  popsize.py  position.py
ideas/: fermi_gas.html  index.html  is_hamiltonian_fermionic.html  matching_circuits_and_informational_geometry.html  onthology_as_sympletic_graph.html  qft_by_michaelmas_term.html
lib/: metadata.json  rss.xml  search-index.json
lib/html/: file-tree.html
lib/scripts/: graph-data.js
mathematica/: blog1.nb  characteristics.nb  ddg.nb  idea.nb  walk.nb
queries/: count-targets.ch.sql  estimate-iterations.sql  exactness-curve-accumulated.ch.sql  exactness-curve-accumulated.ch.sql.jinja2  exactness-curve-ensembles.ch.sql.jinja2  exactness-curve.ch.sql  exactness-curve.ch.sql.jinja2  exactness-curve.yq.sql  exactness-curve.yq.sql.jinja2  statistical-significance.ch.sql  statistical-significance.ch.sql.jinja2  trajectories.ch.sql  trajectories.ch.sql.jinja2
queries/lagrangian/: count-targets.ch.sql  exactness-curve-ensembles.ch.sql  statistical-significance.ch.sql.jinja2  trajectories.ch.sql.jinja2
queries/lagrangian/1/1/: choose-storage-format.yq.sql  trajectories.ch.sql
queries/lagrangian/1/2/: count-targets.ch.sql  statistical-significance.ch.sql  statistical-significance.ch.sql.jinja2  trajectories.ch.sql  trajectories.ch.sql.jinja2
queries/lagrangian/1/3/: statistical-significance.ch.sql
simulator/: hammy.cpp  hammy_unlimited_stack.cpp
simulator/1_walk/: 1_walk.ipynb  hammy.c  hammy.cu
simulator/lagrangian/1/1/: hammy.cpp
simulator/lagrangian/1/2/: hammy.cpp
site-lib/: metadata.json  search-index.json
site-lib/html/: file-tree-content.html
site-lib/styles/: obsidian.css
tests/: conftest.py  test_position.py
