cmake_minimum_required(VERSION 3.0.0)
project(hammy VERSION 0.1.0 LANGUAGES C)

if(CMAKE_CUDA_COMPILER)    
    target_compile_options(cuda_test_cu PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-g -G>)
    set_target_properties(cuda_test_cu PROPERTIES CUDA_ARCHITECTURES "70")
    add_compile_definitions(USE_CUDA)
    message(STATUS "CUDA compiler found: ${CMAKE_CUDA_COMPILER}")
else()
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hammy-lib/c-libs/pcg_basic)
endif()

# Function to get subdirectories
function(get_subdirs result dir)
    file(GLOB children LIST_DIRECTORIES true RELATIVE ${dir} ${dir}/*)
    set(dirlist "")
    foreach(child ${children})
        if(IS_DIRECTORY ${dir}/${child})
            list(APPEND dirlist ${dir}/${child})
        endif()
    endforeach()
    set(${result} ${dirlist} PARENT_SCOPE)
endfunction()

# Process experiments
get_subdirs(experiments ${CMAKE_CURRENT_SOURCE_DIR}/experiments)
if(experiments)
    foreach(experiment ${experiments})
        message(STATUS "Processing experiment: ${experiment}")
        # Get the directory name only
        get_filename_component(exp_name ${experiment} NAME)
        # Extract name after underscore
        string(FIND ${exp_name} "_" underscore_pos)
        if(underscore_pos GREATER -1)
            math(EXPR after_underscore "${underscore_pos} + 1")
            string(SUBSTRING ${exp_name} ${after_underscore} -1 base_name)
            if(EXISTS ${experiment}/${base_name}.c)            
                include_directories(${experiment})
                add_executable(${base_name} ${experiment}/${base_name}.c)
                if (NOT DEFINED CMAKE_CUDA_COMPILER)
                    target_link_libraries(${base_name} pcg_basic)
                endif()
                message(STATUS "Added executable: ${base_name}")
            else()
                message(WARNING "Source file not found: ${experiment}/${base_name}.c")
            endif()
        else()
            message(WARNING "No underscore found in experiment name: ${exp_name}")
        endif()
    endforeach()
else()
    message(WARNING "No experiment directories found")
endif()

