[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hammy_lib"
version = "0.1.0"
description = "A simulation library for parallel and CUDA-enabled computations."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "xarray",
    "cffi",
    "psutil",
    "boto3",
    "matplotlib",
    "scipy",
    "scs"
]
